# COMS22201-lab2

./: lab2.cabal
app/: Main.hs
src/: QuestionOne.hs  QuestionTwo.hs
